--- a/public/css/default.css
+++ b/public/css/default.css
@@ -22,7 +22,7 @@ body {
 .name_and_login_signup {
 }
 
-.company-name {
+.varsity-community {
     font-size: 25px;
     color: #081726;
     margin-left: 1%;
@@ -33,7 +33,7 @@ body {
     -webkit-transition: background .5s;
 }
 
-.company-name:hover {
+.varsity-community:hover {
     color: #f0f0f0;
     border-radius: 5px;
     background: #081726;
